--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "db_barang",
+    "database": "db_product",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "postgres",
-    "database": "database_test",
+    "database": "db_product",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
     "password": "postgres",
-    "database": "database_production",
+    "database": "db_product",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
