--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon app.js"
+    "dev": "cross-env NODE_ENV=development nodemon app.js",
+    "prod": "cross-env NODE_ENV=production nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -19,6 +21,8 @@
     "sequelize": "^6.29.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.21",
     "sequelize-cli": "^6.6.0"
   }
 }
